# rustapi

./: .env  Cargo.toml  Rocket.toml
src/: db.rs  main.rs  metrics.rs  models.rs  routes.rs  schema.rs
