[package]
name = "api-sqlite"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
diesel = { version = "2.1.0", features = ["sqlite", "r2d2", "returning_clauses_for_sqlite_3_35"] }
rocket_sync_db_pools = { version = "0.1.0-rc.2", features = ["diesel_sqlite_pool"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
r2d2 = "0.8"
rayon = "1.7"
parking_lot = "0.12"
lazy_static = "1.4"

[dependencies.libsqlite3-sys]
version = "0.25.2"
features = ["bundled"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true